# ClipType

./: .gitignore  Cargo.toml  DEPLOY.md  skills-lock.json  tauri.conf.json
capabilities/: default.json
docs/: 产品需求.md  技术选型.md
icons/: icon.icns
src/: app.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  orchestrator.rs  state.rs  tray.rs
src/platform/: input.rs  mod.rs  permission.rs
src/services/: clipboard.rs  hotkey.rs  input.rs  mod.rs  permission.rs
ui/: index.html  main.js  styles.css
